--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding:0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -29,6 +34,18 @@ code {
   width:80%;
   margin-left: 10%;
 }
+.home{
+  margin-top: 22%;
+}
+.home h1{
+  font-size: 5rem;
+}
+.home h5{
+  font-size: 2.25rem;
+}
+.btnn a {
+  font-size: 1.5rem;
+}
 @media screen and (max-width:390px){
     
   .card-body h5{
@@ -39,6 +56,50 @@ code {
     
   .card-body h5{
     font-size: 15px;
+  }
+}
+
+
+/* loading component */
+.loadingelm{
+  margin-top: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 5px solid black;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: black transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 
